Add function types to COL (#43)