@@ -17,20 +17,42 @@
 
 package se.dykstrom.jcc.col.types;
 
-import se.dykstrom.jcc.common.ast.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.IntStream;
+
+import se.dykstrom.jcc.common.ast.AddExpression;
+import se.dykstrom.jcc.common.ast.BinaryExpression;
+import se.dykstrom.jcc.common.ast.DivExpression;
+import se.dykstrom.jcc.common.ast.Expression;
+import se.dykstrom.jcc.common.ast.IdentifierDerefExpression;
+import se.dykstrom.jcc.common.ast.NegateExpression;
+import se.dykstrom.jcc.common.ast.TypedExpression;
 import se.dykstrom.jcc.common.compiler.AbstractTypeManager;
 import se.dykstrom.jcc.common.error.AmbiguousException;
 import se.dykstrom.jcc.common.error.SemanticsException;
 import se.dykstrom.jcc.common.error.UndefinedException;
 import se.dykstrom.jcc.common.functions.Function;
+import se.dykstrom.jcc.common.functions.ReferenceFunction;
 import se.dykstrom.jcc.common.symbols.SymbolTable;
+import se.dykstrom.jcc.common.types.AmbiguousType;
+import se.dykstrom.jcc.common.types.Arr;
+import se.dykstrom.jcc.common.types.F64;
+import se.dykstrom.jcc.common.types.Fun;
+import se.dykstrom.jcc.common.types.I64;
+import se.dykstrom.jcc.common.types.NamedType;
+import se.dykstrom.jcc.common.types.NumericType;
+import se.dykstrom.jcc.common.types.Str;
+import se.dykstrom.jcc.common.types.Type;
 import se.dykstrom.jcc.common.types.Void;
-import se.dykstrom.jcc.common.types.*;
-
-import java.util.*;
-import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toList;
 
 /**
  * Manages the types in the COL language.
@@ -55,7 +77,7 @@ public class ColTypeManager extends AbstractTypeManager {
     }
     
     @Override
-    public String getTypeName(Type type) {
+    public String getTypeName(final Type type) {
         if (TYPE_TO_NAME.containsKey(type)) {
             return TYPE_TO_NAME.get(type);
         } else if (type instanceof Arr array) {
@@ -66,8 +88,14 @@ public class ColTypeManager extends AbstractTypeManager {
             }
         } else if (type instanceof Fun function) {
             return "function(" + getArgTypeNames(function.getArgTypes()) + ")->" + getTypeName(function.getReturnType());
+        } else if (type instanceof NamedType namedType) {
+            return namedType.name();
+        } else if (type instanceof AmbiguousType at) {
+            return getPossibleTypeNames(at.types());
+        } else if (type == null) {
+            return "unknown";
         }
-        throw new IllegalArgumentException("unknown type: " + type.getName());
+        throw new IllegalArgumentException("unknown type: " + type.getClass().getSimpleName());
     }
 
     private String getBrackets(int dimensions) {
@@ -76,6 +104,13 @@ public class ColTypeManager extends AbstractTypeManager {
 
     private String getArgTypeNames(List<Type> argTypes) {
         return argTypes.stream().map(this::getTypeName).collect(joining(", "));
+    }
+
+    private String getPossibleTypeNames(final Set<Type> possibleTypes) {
+        return possibleTypes.stream()
+                            .map(this::getTypeName)
+                            .sorted()
+                            .collect(joining(" | ", "[", "]"));
     }
 
     @Override
@@ -92,9 +127,7 @@ public class ColTypeManager extends AbstractTypeManager {
 
     @Override
     public boolean isAssignableFrom(final Type thisType, final Type thatType) {
-        if (thatType instanceof Fun) {
-            return false;
-        } else if (thisType == Arr.INSTANCE && thatType instanceof Arr) {
+        if (thisType == Arr.INSTANCE && thatType instanceof Arr) {
             // All arrays are assignable to an array of the generic array type
             return true;
         }
@@ -120,10 +153,8 @@ public class ColTypeManager extends AbstractTypeManager {
             return F64.INSTANCE;
         }
         // If one of the subexpressions is a float, and the other is an integer, the result is a float
-        if (left instanceof F64 || right instanceof F64) {
-            if (left instanceof I64 || right instanceof I64) {
-                return F64.INSTANCE;
-            }
+        if ((left instanceof F64 || right instanceof F64) && (left instanceof I64 || right instanceof I64)) {
+            return F64.INSTANCE;
         }
         // If expression is a string concatenation, the result is a string
         if (expression instanceof AddExpression) {
@@ -135,6 +166,7 @@ public class ColTypeManager extends AbstractTypeManager {
         throw new SemanticsException("illegal expression: " + expression);
     }
 
+    @SuppressWarnings("java:S6204")
     @Override
     public Function resolveFunction(String name, List<Type> actualArgTypes, SymbolTable symbols) {
         // First, we try to find an exact match
@@ -147,7 +179,10 @@ public class ColTypeManager extends AbstractTypeManager {
         // Find all functions with the right name and number of arguments
         List<Function> functions = symbols.getFunctions(name).stream()
                 .filter(f -> f.getArgTypes().size() == actualArgTypes.size())
-                .toList();
+                .collect(toList());
+        // Possibly add variable of function type with the right number of arguments
+        final var optionalFunction = getReferenceFunction(name, actualArgTypes, symbols);
+        optionalFunction.ifPresent(functions::add);
 
         // For each function, count the number of casts required to make it fit the actual args
         Map<Integer, List<Function>> functionsByNumberOfCasts = mapFunctionsByNumberOfCasts(functions, actualArgTypes);
@@ -170,7 +205,22 @@ public class ColTypeManager extends AbstractTypeManager {
     }
 
     /**
-     * Maps all functions in {@code functions} by the number of arguments the must be cast
+     * Returns an optional {@link ReferenceFunction} that represents a variable with the given
+     * name, and a type that is a function of the same number of arguments as actualArgsTypes.
+     */
+    private static Optional<Function> getReferenceFunction(final String name,
+                                                           final List<Type> actualArgTypes,
+                                                           final SymbolTable symbols) {
+        if (symbols.contains(name) &&
+            (symbols.getIdentifier(name).type() instanceof Fun funType) &&
+            (funType.getArgTypes().size() == actualArgTypes.size())) {
+            return Optional.of(new ReferenceFunction(name, funType.getArgTypes(), funType.getReturnType()));
+        }
+        return Optional.empty();
+    }
+
+    /**
+     * Maps all functions in {@code functions} by the number of arguments that must be cast
      * to make the function match. Functions that are not applicable to the given arguments
      * are not included in the map.
      *
@@ -192,6 +242,11 @@ public class ColTypeManager extends AbstractTypeManager {
                 Type formalArgType = formalArgTypes.get(i);
                 Type actualArgType = actualArgTypes.get(i);
 
+                // Use type inference to find the actual argument type
+                if ((actualArgType instanceof AmbiguousType at) && at.contains(formalArgType)) {
+                    actualArgType = formalArgType;
+                }
+
                 // If the formal and actual argument types are not the same
                 if (!formalArgType.equals(actualArgType)) {
                     if (isAssignableFrom(formalArgType, actualArgType)) {
@@ -211,6 +266,43 @@ public class ColTypeManager extends AbstractTypeManager {
         }
 
         return map;
+    }
+
+    /**
+     * Resolves any ambiguous arguments using the provided formal argument types from
+     * a function call. If there is an ambiguous argument that cannot be resolved this way,
+     * this method throws an exception, because this should not be possible.
+     * <p>
+     * This method only cares about ambiguous arguments and types. Other types are ignored.
+     *
+     * @param actualArgs     A list of arguments to resolve.
+     * @param formalArgTypes A matching list of formal arguments from the called function.
+     * @return The list of resolved arguments, may be equal to actualArgs.
+     */
+    public List<Expression> resolveArgs(final List<Expression> actualArgs, final List<Type> formalArgTypes) {
+        final List<Expression> resolvedArgs = new ArrayList<>();
+
+        for (int i = 0; i < actualArgs.size(); i++) {
+            final var actualArg = actualArgs.get(i);
+            if (actualArg instanceof IdentifierDerefExpression ide) {
+                final var identifier = ide.getIdentifier();
+                final var actualArgType = identifier.type();
+                if (actualArgType instanceof AmbiguousType at) {
+                    final var formalArgType = formalArgTypes.get(i);
+                    if (at.contains(formalArgType)) {
+                        resolvedArgs.add(ide.withIdentifier(identifier.withType(formalArgType)));
+                        continue;
+                    } else {
+                        throw new SemanticsException("cannot resolve arguments, ambiguous argument " + i +
+                                                     " cannot be matched to formal argument " + i +
+                                                     " of type '" + formalArgType + "'");
+                    }
+                }
+            }
+            resolvedArgs.add(actualArg);
+        }
+
+        return resolvedArgs;
     }
 
     /**
